# orange3-argument

./: .gitignore  .prospector.yaml  .readthedocs.yaml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  makefile  mlc-config.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: build.yml  coverage.yml  documentation.yml  linting.yml  markdown-link-check.yml  release.yml  sonarcloud.yml  test_pull_request.yml
doc/widgets/: OWArgExplorer.md  OWArgProcessor.md
docs/: conf.py  getting_started.rst  index.rst  installation.rst  introduction.rst  modules.rst  requirements.txt  widget_guis.rst
docs/_build/doctrees/: environment.pickle  example.doctree  getting_started.doctree  index.doctree  index_backup.doctree  installation.doctree  introduction.doctree  miner.doctree  modules.doctree  widget_guis.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/chunker/: index.doctree
docs/_build/doctrees/autoapi/miner/: index.doctree
docs/_build/doctrees/autoapi/processor/: index.doctree
docs/_build/doctrees/autoapi/reader/: index.doctree
docs/_build/doctrees/autoapi/utilities/: index.doctree
docs/_build/doctrees/widgets/: OWArgChunker.doctree  OWArgExplorer.doctree  OWArgJSONReader.doctree  OWArgMiner.doctree  OWArgProcessor.doctree
docs/_build/html/: .buildinfo  example.html  example.ipynb  genindex.html  getting_started.html  index.html  index_backup.html  installation.html  introduction.html  miner.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  widget_guis.html
docs/_build/html/_modules/: chunker.html  index.html  miner.html  processor.html  reader.html  utilities.html
docs/_build/html/_sources/: index.rst.txt  miner.rst.txt  widget_guis.rst.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/chunker/: index.rst.txt
docs/_build/html/_sources/autoapi/miner/: index.rst.txt
docs/_build/html/_sources/autoapi/processor/: index.rst.txt
docs/_build/html/_sources/autoapi/reader/: index.rst.txt
docs/_build/html/_sources/autoapi/utilities/: index.rst.txt
docs/_build/html/_sources/widgets/: OWArgChunker.md.txt  OWArgExplorer.md.txt  OWArgMiner.md.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/chunker/: index.html
docs/_build/html/autoapi/miner/: index.html
docs/_build/html/autoapi/processor/: index.html
docs/_build/html/autoapi/reader/: index.html
docs/_build/html/autoapi/utilities/: index.html
docs/_build/html/widgets/: OWArgChunker.html  OWArgExplorer.html  OWArgJSONReader.html  OWArgMiner.html  OWArgProcessor.html
docs/widgets/: OWArgChunker.rst  OWArgExplorer.md  OWArgExplorer.rst  OWArgJSONReader.md  OWArgJSONReader.rst  OWArgMiner.md  OWArgMiner.rst  OWArgProcessor.md  OWArgProcessor.rst
example/data/: data_process.ipynb  data_processed_1prod_sample.json
example/workflows/: .demo_workflow.ows.swp.p  arg_explorer.ows  demo_workflow.ows  tutorial.ows
examples/: demo_workflow.ows  example.ipynb  example_dataset.json  example_solver.ipynb
notebooks/: ArguTopic.ipynb  argument_chunker.ipynb  argument_miner_bert.ipynb  argument_processor.ipynb  demo_solver.ipynb  explore_bertopic.ipynb  explore_solving_algs.ipynb  new_framework.ipynb  prepare_data.ipynb  sentence_parser.ipynb  tutorial.ipynb
notebooks/data/: df_arguments.csv  df_chunks.csv
notebooks/data/for_atefeh/: df_arguments.csv  df_chunks.csv  df_topics.csv
orangearg/argument/miner/: chunker.py  miner.py  solver.py  utilities.py
orangearg/argument/reasoner/: aggregation_funcs.py  influence_funcs.py  models.py  solver.py  utilities.py
orangearg/argument/widgets/: OWArgChunker.py  OWArgMiner.py  OWArgProcessor.py
orangecontrib/argument/graph/: graphview.py
orangecontrib/argument/miner/: chunker.py  miner.py  processor.py  reader.py  temp.ipynb  topic.py
orangecontrib/argument/widgets/: OWArgChunker.py  OWArgExplorer.py  OWArgMiner.py  OWArgProcessor.py  OWJSONReader.py  __init__.py  explore.ipynb
tests/: __init__.py  conftest.py  test.ipynb  test_aggregation.py  test_chunker.py  test_data.json  test_influence.py  test_miner.py  test_processor.py  test_reader.py  test_reasoner_model.py  test_system.py  test_utilities.py
tests/test_data/: arguments_processed.csv  chunks.csv  df_arguments.csv  df_arguments_processed.csv  df_topics.csv
