[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore",
    "default:::orangecontrib.argument.miner"
]

[tool.coverage.run]
branch = true
source = ["orangecontrib/argument/miner"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]
target-version = "py39"
include = [
    "orangecontrib/argument/miner"
]

[tool.ruff.mccabe]
max-complexity = 10