[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore",
    "default:::orangearg.argument.miner"
]

[tool.coverage.run]
branch = true
source = ["orangearg/argument/miner"]
relative_files = true

[tool.coverage.report]
show_missing = true