[metadata]
author = Ji Qi
classifiers =
    Development Status :: 1 - Alpha
    Intended Audience :: Developers, Researchers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Argument mining and reasoning add-on on Orange3 platform.
keyworkds = 
    Orange3
    Argument mining
    Visualization
long_description = file: README.md
long_description_content_type = text/markdown
name = orange3-argument
project_urls =
    Bug Tracker = https://github.com/EyeofBeholder-NLeSC/orange3-argument/issues
url = https://github.com/EyeofBeholder-NLeSC/orange3-argument
version = 0.1.0


[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
install_requires =
    orange3
    pyqt6
    pyqt6-webengine
    sip
    numpy <= 1.24
    textblob
    spacy
    bertopic
    networkx
    scikit_learn
    torch


[options.entry_points]
orange3.addon = 
    argument = orangecontrib.argument
orange.widgets = 
    Argument = orangecontrib.argument.widgets

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes


[options.extras_require]
dev =
    coverage [toml]
    pytest
    sphinx
    sphinx_rtd_theme
    black
    pylint
publishing = 
    twine
    wheel


[tool:pytest]
testpaths = tests


[tool.coverage.run]
branch = True
source = ["orangecontrib/argument/miner"]
command_line = "-m pytest"