[metadata]
author = Ji Qi
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = Argument mining and reasoning add-on on Orange3 platform.
keyworkds = 
    Orange3
    Argument mining
    Visualization
long_description = file: README.md
long_description_content_type = text/markdown
name = orangearg
project_urls =
    Bug Tracker = https://github.com/EyeofBeholder-NLeSC/orange3-argument/issues
url = https://github.com/EyeofBeholder-NLeSC/orange3-argument
version = 0.1.1


[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages = find:
install_requires =
    orange3
    pyqt6
    pyqt6-webengine
    sip
    numpy <= 1.24
    textblob
    spacy
    bertopic
    networkx
    scikit_learn


[options.entry_points]
orange3.addon = 
    argument = orangearg.argument
orange.widgets = 
    Argument = orangearg.argument.widgets

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes


[options.extras_require]
dev =
    prospector[with_pyroma]
    pytest
    pytest-mock
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    myst_parser
    nbsphinx
    nbsphinx_link
    black
    pylint
publishing = 
    twine
    wheel
